Bug 25660 - Failing to parse vsublt in an it block with MVE enabled
Summary: Failing to parse vsublt in an it block with MVE enabled
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gas (show other bugs)
Version: 2.33
: P2 normal
Target Milestone: ---
Assignee: Andre Vieira
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-12 10:49 UTC by Andre Vieira
Modified: 2020-03-13 13:48 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andre Vieira 2020-03-12 10:49:46 UTC
The following assembly will be wrongly rejected if mve is enabled:

.syntax unified
.text
itt lt
vsublt.f32 s0, s1, s2
vaddlt.f32 s0, s1, s2

This is because I forgot to allow for single precision register parsing for vsubl/vaddl which is what gets matched when MVE is enabled as 't' is stripped as a potential true lane predication suffix.
Comment 1 Andre Vieira 2020-03-13 13:48:06 UTC
Fixed in master 2.34 and 2.33